watch_wasm/wasm_runner/target/release/build/io-extras-70cb8a2383cdd6af/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(can_vector)]
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(write_all_vectored)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
